crates/ruff_python_parser/tests/snapshots/valid_syntax@valid_annotation_non_generic.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/valid_annotation_non_generic.py
---
## AST

```
Module(
    ModModule {
        range: 0..25,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    range: 0..24,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 4..5,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 5..7,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Named(
                            ExprNamed {
                                range: 12..18,
                                target: Name(
                                    ExprName {
                                        range: 12..13,
                                        id: Name("y"),
                                        ctx: Store,
                                    },
                                ),
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 17..18,
                                        value: Int(
                                            3,
                                        ),
                                    },
                                ),
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                range: 21..24,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 21..24,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
