crates/ruff_python_parser/tests/snapshots/valid_syntax@valid_annotation_py313.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/valid_annotation_py313.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..144,
        body: [
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(None),
                    range: 44..55,
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 44..45,
                            id: Name("a"),
                            ctx: Store,
                        },
                    ),
                    annotation: Named(
                        ExprNamed {
                            node_index: NodeIndex(None),
                            range: 48..54,
                            target: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 48..49,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                            value: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 53..54,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                    value: None,
                    simple: true,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 56..107,
                    is_async: false,
                    decorator_list: [],
                    name: FunctionDefName {
                        name: Identifier {
                            id: Name("outer"),
                            range: 60..65,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                        type_params: None,
                    },
                    parameters: Parameters {
                        range: 65..67,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        AnnAssign(
                            StmtAnnAssign {
                                node_index: NodeIndex(None),
                                range: 73..85,
                                target: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 73..74,
                                        id: Name("b"),
                                        ctx: Store,
                                    },
                                ),
                                annotation: Yield(
                                    ExprYield {
                                        node_index: NodeIndex(None),
                                        range: 77..84,
                                        value: Some(
                                            NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 83..84,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                                value: None,
                                simple: true,
                            },
                        ),
                        AnnAssign(
                            StmtAnnAssign {
                                node_index: NodeIndex(None),
                                range: 90..107,
                                target: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 90..91,
                                        id: Name("c"),
                                        ctx: Store,
                                    },
                                ),
                                annotation: YieldFrom(
                                    ExprYieldFrom {
                                        node_index: NodeIndex(None),
                                        range: 94..106,
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 105..106,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                value: None,
                                simple: true,
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 108..143,
                    is_async: true,
                    decorator_list: [],
                    name: FunctionDefName {
                        name: Identifier {
                            id: Name("outer"),
                            range: 118..123,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                        type_params: None,
                    },
                    parameters: Parameters {
                        range: 123..125,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        AnnAssign(
                            StmtAnnAssign {
                                node_index: NodeIndex(None),
                                range: 131..143,
                                target: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 131..132,
                                        id: Name("d"),
                                        ctx: Store,
                                    },
                                ),
                                annotation: Await(
                                    ExprAwait {
                                        node_index: NodeIndex(None),
                                        range: 135..142,
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 141..142,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                value: None,
                                simple: true,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
