crates/ruff_python_parser/tests/snapshots/valid_syntax@walrus_after_py38.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/walrus_after_py38.py
---
## AST

```
Module(
    ModModule {
        range: 0..60,
        body: [
            If(
                StmtIf {
                    range: 45..59,
                    test: Named(
                        ExprNamed {
                            range: 48..54,
                            target: Name(
                                ExprName {
                                    range: 48..49,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                            value: NumberLiteral(
                                ExprNumberLiteral {
                                    range: 53..54,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                range: 56..59,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 56..59,
                                    },
                                ),
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
        ],
    },
)
```
