crates/ruff_python_parser/tests/snapshots/valid_syntax@walrus_py38.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/walrus_py38.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..54,
        body: Suite {
            range: 0..54,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 45..53,
                        value: Named(
                            ExprNamed {
                                node_index: NodeIndex(None),
                                range: 46..52,
                                target: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 46..47,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 51..52,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
